todoList edit view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ToBeContinued</string>
     <string name="check_box_text">Task 1</string>
+    <string name="action_delete">DELETE</string>
 </resources>
